MazeGenerator class created
Starting the implementation of a MazeGenerator.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ out/production/MazeSolver/Maze.class
 out/production/MazeSolver/Main.class
 out/production/MazeSolver/BlockPoint.class
 out/production/MazeSolver/Block.class
+out/production/MazeSolver/MazeGenerator.class
