--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ out/production/MazeSolver/Main.class
 out/production/MazeSolver/BlockPoint.class
 out/production/MazeSolver/Block.class
 out/production/MazeSolver/MazeGenerator.class
+out/production/MazeSolver/DrawableMaze.class
